@@ -1,5 +1,6 @@
-(defproject jepsen "0.1.13-SNAPSHOT"
+(defproject jepsen "0.1.14-SNAPSHOT"
   :description "Distributed systems testing framework."
+  :url         "https://jepsen.io"
   :license {:name "Eclipse Public License"
             :url  "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.10.0"]
@@ -8,7 +9,7 @@
                  [spootnik/unilog "0.7.13"]
                  [org.clojure/tools.cli "0.4.1"]
                  [clj-time "0.11.0"]
-                 [jepsen.txn "0.1.0"]
+                 [jepsen.txn "0.1.1-SNAPSHOT"]
                  [knossos "0.3.4" :exclusions [org.slf4j/slf4j-log4j12]]
                  [tea-time "1.0.1"]
                  [clj-ssh "0.5.14"]
@@ -21,19 +22,26 @@
                  [dom-top "1.0.4"]
                  [slingshot "0.12.2"]
                  [org.clojure/data.codec "0.1.1"]
-                 [fipp "0.6.13"]]
+                 [fipp "0.6.13"]
+                 [io.lacuna/bifurcan "0.1.0"]]
   :main jepsen.cli
   :plugins [[lein-localrepo "0.5.4"]
             [lein-codox "0.10.3"]]
-  :aot [jepsen.cli clojure.tools.logging.impl]
-;        clojure.tools.logging.impl]
   :jvm-opts ["-Xmx32g" "-XX:+UseConcMarkSweepGC" "-XX:+UseParNewGC"
              "-XX:+CMSParallelRemarkEnabled" "-XX:+AggressiveOpts"
-             "-XX:+UseFastAccessorMethods" "-server"
-             ;"-XX:-OmitStackTraceInFastThrow"
-             ]
-  :test-selectors {:default (complement :integration)
+             "-XX:+UseFastAccessorMethods" "-server"]
+  :test-selectors {:default (fn [m]
+                              (not (or (:integration m)
+                                       (:logging m))))
+                   :logging     :logging
                    :integration :integration}
   :codox {:output-path "doc/"
           :source-uri "https://github.com/jepsen-io/jepsen/blob/{version}/jepsen/{filepath}#L{line}"
-          :metadata {:doc/format :markdown}})
+          :metadata {:doc/format :markdown}}
+  :profiles {:uberjar {:aot :all}
+             :dev {:jvm-opts ["-Xmx32g" "-XX:+UseConcMarkSweepGC"
+                              "-XX:+UseParNewGC"
+                              "-XX:+CMSParallelRemarkEnabled"
+                              "-XX:+AggressiveOpts"
+                              "-XX:+UseFastAccessorMethods" "-server"
+                              "-XX:-OmitStackTraceInFastThrow"]}})
